MonetDB5/src/mal/Tests/tst008.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
#i:=32;
#printi;
#print(i);
#
!ERROR: printi;
!             ^'.' or '(' expected
function Admin.main():int; #0  unknown (main:int)
    i := 32; #1  unknown (i:any)<-($2:int)
    $3; #2  unknown ($3:any)
    print(i); #3  unknown ($4:any)<-(i:any)
end main; #4  unknown 
>